--- a/pipelines/pipeline-PR-Debug-All.yml
+++ b/pipelines/pipeline-PR-Debug-All.yml
@@ -5,6 +5,17 @@ pr:
   branches:
     include:
     - contrib
+  paths:
+    exclude:
+    - 'tools/*'
+    - LICENSE
+    - NOTICE
+    - CHANGES.md
+    - CODE_OF_CONDUCT.md
+    - CONTRIBUTING.md
+    - ISSUES.md
+    - README.md
+    - SECURITY.md
 
 stages:
   - stage: build
