--- a/dotnet/nuget/SEALNet.targets.in
+++ b/dotnet/nuget/SEALNet.targets.in
@@ -9,12 +9,22 @@
     <SEALCBinaryFiles Condition="$([MSBuild]::IsOsPlatform('Linux'))" Include="$(MSBuildThisFileDirectory)../runtimes/linux-x64/libsealc.so*" />
     <SEALCBinaryFiles Condition="$([MSBuild]::IsOsPlatform('OSX'))" Include="$(MSBuildThisFileDirectory)../runtimes/macos-x64/libsealc*.dylib" />
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Condition="'$(AndroidApplication)'!='True'">
     <None Include="@(SEALCBinaryFiles)">
       <Link Condition="$([MSBuild]::IsOsPlatform('Windows'))">sealc.dll</Link>
       <Link Condition="$([MSBuild]::IsOsPlatform('Linux'))">libsealc.so</Link>
       <Link Condition="$([MSBuild]::IsOsPlatform('OSX'))">libsealc.dylib</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup Condition="'$(AndroidApplication)'=='True'">
+    <AndroidNativeLibrary Include="$(MSBuildThisFileDirectory)../runtimes/android-arm64/libsealc.so">
+      <Abi>arm64-v8a</Abi>
+      <Link>libs\arm64-v8a\libsealc.so</Link>
+    </AndroidNativeLibrary>
+    <AndroidNativeLibrary Include="$(MSBuildThisFileDirectory)../runtimes/android-x64/libsealc.so">
+      <Abi>x86_64</Abi>
+      <Link>libs\x86_64\libsealc.so</Link>
+    </AndroidNativeLibrary>
   </ItemGroup>
 </Project>
