--- a/native/src/seal/util/CMakeLists.txt
+++ b/native/src/seal/util/CMakeLists.txt
@@ -18,7 +18,7 @@ target_sources(seal_obj PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}/rlwe.cpp
     ${CMAKE_CURRENT_LIST_DIR}/rns.cpp
     ${CMAKE_CURRENT_LIST_DIR}/scalingvariant.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/smallntt.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/ntt.cpp
     ${CMAKE_CURRENT_LIST_DIR}/streambuf.cpp
     ${CMAKE_CURRENT_LIST_DIR}/uintarith.cpp
     ${CMAKE_CURRENT_LIST_DIR}/uintarithmod.cpp
@@ -59,7 +59,7 @@ install(
         ${CMAKE_CURRENT_LIST_DIR}/rlwe.h
         ${CMAKE_CURRENT_LIST_DIR}/rns.h
         ${CMAKE_CURRENT_LIST_DIR}/scalingvariant.h
-        ${CMAKE_CURRENT_LIST_DIR}/smallntt.h
+        ${CMAKE_CURRENT_LIST_DIR}/ntt.h
         ${CMAKE_CURRENT_LIST_DIR}/streambuf.h
         ${CMAKE_CURRENT_LIST_DIR}/uintarith.h
         ${CMAKE_CURRENT_LIST_DIR}/uintarithmod.h
