--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -70,7 +70,7 @@
     <ClInclude Include="seal\util\rlwe.h" />
     <ClInclude Include="seal\util\rns.h" />
     <ClInclude Include="seal\util\scalingvariant.h" />
-    <ClInclude Include="seal\util\smallntt.h" />
+    <ClInclude Include="seal\util\ntt.h" />
     <ClInclude Include="seal\util\streambuf.h" />
     <ClInclude Include="seal\util\uintarith.h" />
     <ClInclude Include="seal\util\uintarithmod.h" />
@@ -115,7 +115,7 @@
     <ClCompile Include="seal\util\polyarithsmallmod.cpp" />
     <ClCompile Include="seal\util\rlwe.cpp" />
     <ClCompile Include="seal\util\scalingvariant.cpp" />
-    <ClCompile Include="seal\util\smallntt.cpp" />
+    <ClCompile Include="seal\util\ntt.cpp" />
     <ClCompile Include="seal\util\streambuf.cpp" />
     <ClCompile Include="seal\util\uintarith.cpp" />
     <ClCompile Include="seal\util\uintarithmod.cpp" />
