--- a/native/tests/SEALTest.vcxproj.filters
+++ b/native/tests/SEALTest.vcxproj.filters
@@ -113,7 +113,7 @@
     <ClCompile Include="seal\util\uintarithsmallmod.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
-    <ClCompile Include="seal\util\smallntt.cpp">
+    <ClCompile Include="seal\util\ntt.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
     <ClCompile Include="seal\plaintext.cpp">
