Update android.yml for Azure Pipelines

--- a/pipelines/android.yml
+++ b/pipelines/android.yml
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: Gradle@2
   inputs:
-    workingDirectory: 'android'
+    workingDirectory: '$(Build.SourcesDirectory)\android'
     gradleWrapperFile: 'gradlew'
     gradleOptions: ''
     publishJUnitResults: false
