--- a/pipelines/android.yml
+++ b/pipelines/android.yml
@@ -13,7 +13,7 @@ steps:
 - task: Gradle@2
   inputs:
     workingDirectory: '$(Build.SourcesDirectory)\android'
-    gradleWrapperFile: 'gradlew'
+    gradleWrapperFile: '$(Build.SourcesDirectory)\gradlew'
     gradleOptions: ''
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
