Update android.yml for Azure Pipelines

--- a/pipelines/android.yml
+++ b/pipelines/android.yml
@@ -13,7 +13,9 @@ steps:
 - task: CmdLine@2
   displayName: Update NDK
   inputs:
-    script: '$ANDROID_HOME/tools/bin/sdkmanager --install ndk;21.0.6113669'
+    script: |
+      echo Android home: %ANDROID_HOME%
+      %ANDROID_HOME%/tools/bin/sdkmanager --install ndk;21.0.6113669
 
 - task: Gradle@2
   displayName: Compile Android Native Libraries
