Update android.yml for Azure Pipelines

--- a/pipelines/android.yml
+++ b/pipelines/android.yml
@@ -16,6 +16,19 @@ steps:
     workingDirectory: '$(Build.SourcesDirectory)'
     cmakeArgs: '--version'
 
+- task: PowerShell@2
+  displayName: Download Ninja
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Download Ninja
+      $ToolsDirectory = Join-Path -Path $Env:BUILD_SOURCESDIRECTORY -ChildPath tools
+      $NinjaZipFile = Join-Path $ToolsDirectory -ChildPath ninja.zip
+      
+      Invoke-WebRequest -Uri "https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-win.zip" -OutFile $NinjaZipFile
+      Expand-Archive -Path $NinjaZipFile -DestinationPath $ToolsDirectory
+      Copy-Item -Path $NinjaZipFile -Destination "c:\Program Files\CMake\bin"
+
 - task: CmdLine@2
   displayName: Update NDK
   inputs:
