--- a/pipelines/pipeline-CI-Release-All.yml
+++ b/pipelines/pipeline-CI-Release-All.yml
@@ -21,4 +21,8 @@ stages:
     - template: jobs.yml
       parameters:
         debug: false
+        name: Android
+    - template: jobs.yml
+      parameters:
+        debug: false
         name: Nuget
