--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,6 @@
+# Copyright (c) Microsoft Corporation. All rights reserved.
+# Licensed under the MIT license.
+
 #Mon Apr 06 10:08:19 PDT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
