--- a/dotnet/nuget/SEALNet.nuspec.in
+++ b/dotnet/nuget/SEALNet.nuspec.in
@@ -30,7 +30,7 @@
     <file src="$MACOS_SEAL_C$" target="runtimes/macos-x64" />
     <file src="$ANDROIDARM64_SEAL_C$" target="runtimes/android-arm64" />
     <file src="$ANDROIDX64_SEAL_C$" target="runtimes/android-x64" />
-    <file src="../../lib/dotnet/$Configuration$/netstandard2.0/SEALNet.dll" target="lib/netstandard2.0/" />
+    <file src="../../lib/dotnet/$configuration$/netstandard2.0/SEALNet.dll" target="lib/netstandard2.0/" />
     <file src="../../LICENSE" target="LICENSE" />
   </files>
 </package>
