Fixing MSGSL issue in MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,7 +131,7 @@ include(CheckCXXSourceRuns)
 include(CheckTypeSize)
 
 # We clean up native/src/gsl directory which is no longer used in version >= 3.5.0
-if(EXISTS ${SEAL_INCLUDES_BUILD_DIR}/gsl)
+if(NOT MSVC AND EXISTS ${SEAL_INCLUDES_BUILD_DIR}/gsl)
     message(STATUS "Removing ${SEAL_INCLUDES_BUILD_DIR}/gsl; this is no longer used by Microsoft SEAL >= 3.5.0")
     file(REMOVE_RECURSE ${SEAL_INCLUDES_BUILD_DIR}/gsl)
 endif()
