Get .Net Core 2.0 as well

--- a/pipelines/windows.yml
+++ b/pipelines/windows.yml
@@ -25,6 +25,12 @@ steps:
     debugMode: false
 
 - task: UseDotNet@2
+  displayName: 'Get .NET Core 2.0 SDK'
+  inputs:
+    packageType: 'sdk'
+    version: '2.0.x'
+
+- task: UseDotNet@2
   displayName: 'Get .NET Core 3.1 SDK'
   inputs:
     packageType: 'sdk'
