--- a/pipelines/windows.yml
+++ b/pipelines/windows.yml
@@ -24,11 +24,12 @@ steps:
     outputFormat: sarif
     debugMode: false
 
-- task: UseDotNet@2
-  displayName: 'Get .NET Core 2.0 SDK'
-  inputs:
-    packageType: 'sdk'
-    version: '2.0.x'
+- ${{ if eq(parameters.configuration, 'Release') }}:
+  - task: UseDotNet@2
+    displayName: 'Get .NET Core 2.0 SDK'
+    inputs:
+      packageType: 'sdk'
+      version: '2.0.x'
 
 - task: UseDotNet@2
   displayName: 'Get .NET Core 3.1 SDK'
