Upgraded GoogleTest NuGet package

--- a/native/tests/SEALTest.vcxproj.filters
+++ b/native/tests/SEALTest.vcxproj.filters
@@ -156,8 +156,6 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <Filter>Other</Filter>
-    </None>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
