--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,7 @@ endif()
 # [Option] CXX compiler flags
 # For easier adding of CXX compiler flags
 include(CheckCXXCompilerFlag)
-function(enable_cxx_compiler_flag_if_supported flag)
+function(seal_enable_cxx_compiler_flag_if_supported flag)
     string(FIND "${CMAKE_CXX_FLAGS}" "${flag}" flag_already_set)
     if(flag_already_set EQUAL -1)
         message(STATUS "Adding CXX compiler flag: ${flag} ...")
@@ -90,11 +90,11 @@ set(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY ON)
 
 # In Debug mode, enable extra compiler flags.
 if(NOT MSVC AND SEAL_DEBUG)
-  enable_cxx_compiler_flag_if_supported("-Wall")
-  enable_cxx_compiler_flag_if_supported("-Wextra")
-  enable_cxx_compiler_flag_if_supported("-Wconversion")
-  enable_cxx_compiler_flag_if_supported("-Wshadow")
-  enable_cxx_compiler_flag_if_supported("-pedantic")
+  seal_enable_cxx_compiler_flag_if_supported("-Wall")
+  seal_enable_cxx_compiler_flag_if_supported("-Wextra")
+  seal_enable_cxx_compiler_flag_if_supported("-Wconversion")
+  seal_enable_cxx_compiler_flag_if_supported("-Wshadow")
+  seal_enable_cxx_compiler_flag_if_supported("-pedantic")
 endif()
 
 # Path for outupt
@@ -141,7 +141,7 @@ endif()
 ##################################
 
 # Set the C++ language version
-macro(set_language target)
+macro(seal_set_language target)
     if(SEAL_USE_CXX17)
         target_compile_features(${target} PUBLIC cxx_std_17)
     else()
@@ -150,31 +150,31 @@ macro(set_language target)
 endmacro()
 
 # Set the VERSION property
-macro(set_version target)
+macro(seal_set_version target)
     set_target_properties(${target} PROPERTIES VERSION ${SEAL_VERSION})
 endmacro()
 
 # Set the library filename to reflect version
-macro(set_version_filename target)
+macro(seal_set_version_filename target)
     set_target_properties(${target} PROPERTIES
         OUTPUT_NAME ${target}-${SEAL_VERSION_MAJOR}.${SEAL_VERSION_MINOR})
 endmacro()
 
 # Set the SOVERSION property
-macro(set_soversion target)
+macro(seal_set_soversion target)
     set_target_properties(${target} PROPERTIES
         SOVERSION ${SEAL_VERSION_MAJOR}.${SEAL_VERSION_MINOR})
 endmacro()
 
 # Set include directories for build and install interfaces
-macro(set_include_directories target)
+macro(seal_set_include_directories target)
     target_include_directories(${target} PUBLIC
         $<BUILD_INTERFACE:${SEAL_INCLUDES_BUILD_DIR}>
         $<INSTALL_INTERFACE:${SEAL_INCLUDES_INSTALL_DIR}>)
 endmacro()
 
 # Link a thread library
-macro(link_threads target)
+macro(seal_link_threads target)
     # Require thread library
     if(NOT TARGET Threads::Threads)
         set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
@@ -187,7 +187,7 @@ macro(link_threads target)
 endmacro()
 
 # Include target to given export
-macro(install_target target export)
+macro(seal_install_target target export)
     install(TARGETS ${target} EXPORT ${export}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
@@ -195,7 +195,7 @@ macro(install_target target export)
 endmacro()
 
 # Manually combine archives, using ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} to keep temporary files.
-macro(combine_archives target dependency)
+macro(seal_combine_archives target dependency)
     if(CMAKE_HOST_WIN32)
         get_filename_component(CXX_DIR "${CMAKE_CXX_COMPILER}" DIRECTORY)
         set(AR_CMD_PATH "${CXX_DIR}/llvm-ar.exe")
@@ -219,7 +219,7 @@ endmacro()
 # External dependencies #
 #########################
 
-function(create_cache_entries dir_name)
+function(seal_create_cache_entries dir_name)
     set(cce_file_name ${dir_name}/cache_init.txt)
     file(WRITE  "${cce_file_name}" "set(CMAKE_C_COMPILER \"${CMAKE_C_COMPILER}\" CACHE STRING \"\" FORCE)\n")
     file(APPEND "${cce_file_name}" "set(CMAKE_CXX_COMPILER \"${CMAKE_CXX_COMPILER}\" CACHE STRING \"\" FORCE)\n")
@@ -250,7 +250,7 @@ if(SEAL_USE_MSGSL AND NOT MSVC)
             RESULT_VARIABLE result
             WORKING_DIRECTORY ${THIRDPARTY_DIR}/msgsl)
     else()
-        create_cache_entries(${THIRDPARTY_DIR}/msgsl)
+        seal_create_cache_entries(${THIRDPARTY_DIR}/msgsl)
         if(EXISTS ${THIRDPARTY_DIR}/msgsl/CMakeCache.txt)
             # Force regenerating make files. When cross compiling we might be
             # compiling more than one platform at a time.
@@ -310,7 +310,7 @@ if(SEAL_USE_ZLIB AND NOT MSVC)
             RESULT_VARIABLE result
             WORKING_DIRECTORY ${THIRDPARTY_DIR}/zlib)
     else()
-        create_cache_entries(${THIRDPARTY_DIR}/zlib)
+        seal_create_cache_entries(${THIRDPARTY_DIR}/zlib)
         if(EXISTS ${THIRDPARTY_DIR}/zlib/CMakeCache.txt)
             # Force regenerating make files. When cross compiling we might be
             # compiling more than one platform at a time.
@@ -598,8 +598,8 @@ add_library(seal_obj OBJECT)
 add_subdirectory(native/src/seal)
 
 # Set C++ language version and include directories for the object library
-set_language(seal_obj)
-set_include_directories(seal_obj)
+seal_set_language(seal_obj)
+seal_set_include_directories(seal_obj)
 
 if(SEAL_USE_MSGSL AND NOT MSVC)
     target_link_libraries(seal_obj PRIVATE GSL)
@@ -611,12 +611,12 @@ endif()
 
 # Always build the static library
 add_library(seal STATIC $<TARGET_OBJECTS:seal_obj>)
-set_version(seal)
-set_version_filename(seal)
-set_language(seal)
-set_include_directories(seal)
-link_threads(seal)
-install_target(seal SEALTargets)
+seal_set_version(seal)
+seal_set_version_filename(seal)
+seal_set_language(seal)
+seal_set_include_directories(seal)
+seal_link_threads(seal)
+seal_install_target(seal SEALTargets)
 
 # Conditionally add MSGSL include directory to build interface
 if(SEAL_USE_MSGSL AND NOT MSVC)
@@ -627,11 +627,11 @@ endif()
 if(BUILD_SHARED_LIBS)
     add_library(seal_shared SHARED $<TARGET_OBJECTS:seal_obj>)
     set_target_properties(seal_shared PROPERTIES OUTPUT_NAME seal)
-    set_version(seal_shared)
-    set_soversion(seal_shared)
-    set_language(seal_shared)
-    set_include_directories(seal_shared)
-    link_threads(seal_shared)
+    seal_set_version(seal_shared)
+    seal_set_soversion(seal_shared)
+    seal_set_language(seal_shared)
+    seal_set_include_directories(seal_shared)
+    seal_link_threads(seal_shared)
 
     # Conditionally add MSGSL include directory to build interface
     if(SEAL_USE_MSGSL AND NOT MSVC)
@@ -643,12 +643,12 @@ if(BUILD_SHARED_LIBS)
         target_link_libraries(seal_shared PRIVATE zlibstatic)
     endif()
 
-    install_target(seal_shared SEALTargets)
+    seal_install_target(seal_shared SEALTargets)
 endif()
 
 # In UNIX-like platforms combine manually seal and zlibstatic into a single archive; not pretty, but works
 if(SEAL_USE_ZLIB AND NOT MSVC)
-    combine_archives(seal zlibstatic)
+    seal_combine_archives(seal zlibstatic)
 endif()
 
 #########################
@@ -671,14 +671,14 @@ if(SEAL_BUILD_SEAL_C)
 
     # Add source files to library and header files to install
     add_subdirectory(native/src/seal/c)
-    set_version(sealc)
-    set_soversion(sealc)
-    set_language(sealc)
-    set_include_directories(sealc)
+    seal_set_version(sealc)
+    seal_set_soversion(sealc)
+    seal_set_language(sealc)
+    seal_set_include_directories(sealc)
 
     target_link_libraries(sealc PUBLIC seal)
 
-    install_target(sealc SEALTargets)
+    seal_install_target(sealc SEALTargets)
 endif()
 
 #################################
